--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -1,10 +1,16 @@
 {
   "appName": "Bitop",
   "language": "简体中文",
+  "act": {
+    "confirm": "确认",
+    "cancel": "取消",
+    "submit": "送出"
+  },
   "bookList": {
     "bookList": "帐本清单",
-    "createNewBook": "建立新帐本",
-    "noBook": "目前无帐本"
+    "newBook": "建立新帐本",
+    "noBook": "目前无帐本",
+    "name": "名称"
   },
   "bookDetail": {
     "back": "回清单"
