--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -13,6 +13,11 @@
     "name": "名稱"
   },
   "bookDetail": {
-    "back": "回清單"
+    "back": "回清單",
+    "total": "Total",
+    "member": "Member",
+    "balance": "Balance",
+    "noMemberHint": "Please click \"Member\" to add members, and then we can start",
+    "newTransaction": "新增帳目"
   }
 }
