--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -18,6 +18,8 @@
     "member": "Member",
     "balance": "Balance",
     "noMemberHint": "Please click \"Member\" to add members, and then we can start",
-    "newTransaction": "新增帳目"
+    "newTransaction": "New Bill",
+    "multiple": "Multiple People",
+    "billNote": "{{member}} paid ${{amount}}"
   }
 }
