--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -20,6 +20,7 @@
     "noMemberHint": "請先至「成員」中新增一起分帳的夥伴，才能開始記帳喔！",
     "newTransaction": "新增帳目",
     "multiple": "多人",
-    "billNote": "{{member}}支付了 ${{amount}}"
+    "billOutNote": "{{member}}支付了 ${{amount}}",
+    "billInNote": "{{member}}收取了 ${{amount}}"
   }
 }
