--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -25,6 +25,14 @@
     "billInNote": "{{member}}收取了 ${{amount}}"
   },
   "member": {
-    "back": "回帐本"
+    "head": "帐本成员",
+    "back": "回帐本",
+    "create": "新增",
+    "nickname": "暱称",
+    "noMemberHint": "尚未有成员，请输入暱称来新增成员吧！",
+    "shareWithFriend": "与好友共享",
+    "scanHint": "让好友扫描此 QR Code 或",
+    "shareLink": "分享连结",
+    "code": "通行码："
   }
 }
