implement share page

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -34,5 +34,10 @@
     "scanHint": "Scan QR Code or",
     "shareLink": "Share Link",
     "code": "Code:"
+  },
+  "share": {
+    "join": "Join this Book?",
+    "code": "Code",
+    "wrongCode": "Wrong Code"
   }
 }
