--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -33,7 +33,8 @@
     "shareWithFriend": "与好友共享",
     "scanHint": "让好友扫描此 QR Code 或",
     "shareLink": "分享连结",
-    "code": "通行码："
+    "code": "通行码：",
+    "edit": "编辑资料"
   },
   "share": {
     "join": "加入此帐本？",
