--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -34,7 +34,7 @@
     "shareWithFriend": "與好友共享",
     "scanHint": "讓好友掃描此 QR Code 或",
     "shareLink": "分享連結",
-    "code": "通行碼：",
+    "codeHint": "並輸入通行碼：",
     "edit": "編輯資料",
     "deleteHint": "要刪除「{{nickname}}」嗎？"
   },
