--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -22,8 +22,10 @@
     "noMemberHint": "请先至「成员」中新增一起分帐的伙伴，才能开始记帐喔！",
     "newTransaction": "新增帐目",
     "multiple": "多人",
-    "billOutNote": "{{member}}支付了 ${{amount}}",
-    "billInNote": "{{member}}收取了 ${{amount}}"
+    "billOutNote": "{{member}} 支付了 ${{amount}}",
+    "billInNote": "{{member}} 收取了 ${{amount}}",
+    "transfer": "转帐",
+    "transferNote": "{{srcMember}} 转了 ${{amount}} 给 {{dstMember}}"
   },
   "member": {
     "head": "帐本成员",
