--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -37,7 +37,8 @@
     "currency": "Curreny Symbol",
     "deleteBook": "Delete Book",
     "systemDeleteDate": "System Clean up Date",
-    "systemDeleteHint": "If there is no any update for 100 days, the book would be removed by system."
+    "systemDeleteHint": "If there is no any update for 100 days, the book would be removed by system.",
+    "rename": "Rename"
   },
   "member": {
     "head": "Members",
