--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -37,7 +37,8 @@
     "currency": "幣別",
     "deleteBook": "刪除帳本",
     "systemDeleteDate": "系統移除日期",
-    "systemDeleteHint": "若此帳本累積 100 天未更新，則系統將自動移除此帳本所有資料。"
+    "systemDeleteHint": "若此帳本累積 100 天未更新，則系統將自動移除此帳本所有資料。",
+    "rename": "重新命名"
   },
   "member": {
     "head": "帳本成員",
