add deleted label

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -48,14 +48,15 @@
     "in": "Income",
     "out": "Expense",
     "transfer": "Transfer",
+    "deleted": "Deleted",
     "payer": "Payer",
     "sharer": "Sharer",
     "sender": "Sender",
     "receiver": "Receiver",
     "memo": "Memo",
-    "created": "Created at {{date}}",
-    "updated": "Updated at {{date}}",
-    "deleted": "Deleted at {{date}}",
+    "createdAt": "Created at {{date}}",
+    "updatedAt": "Updated at {{date}}",
+    "deletedAt": "Deleted at {{date}}",
     "updateContent": "- {{key}} is updated from {{from}} to {{to}}",
     "key": {
       "date": "Date",
