--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -48,14 +48,15 @@
     "in": "收入",
     "out": "支出",
     "transfer": "转帐",
+    "deleted": "已删除",
     "payer": "付款者",
     "sharer": "分摊者",
     "sender": "汇款者",
     "receiver": "收款者",
     "memo": "备註",
-    "created": "于 {{date}} 建立",
-    "updated": "于 {{date}} 更新",
-    "deleted": "于 {{date}} 删除",
+    "createdAt": "于 {{date}} 建立",
+    "updatedAt": "于 {{date}} 更新",
+    "deletedAt": "于 {{date}} 删除",
     "updateContent": "- {{key}} 从 {{from}} 变更成 {{to}}",
     "key": {
       "date": "日期",
