--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -48,14 +48,15 @@
     "in": "收入",
     "out": "支出",
     "transfer": "轉帳",
+    "deleted": "已刪除",
     "payer": "付款者",
     "sharer": "分攤者",
     "sender": "匯款者",
     "receiver": "收款者",
     "memo": "備註",
-    "created": "於 {{date}} 建立",
-    "updated": "於 {{date}} 更新",
-    "deleted": "於 {{date}} 刪除",
+    "createdAt": "於 {{date}} 建立",
+    "updatedAt": "於 {{date}} 更新",
+    "deletedAt": "於 {{date}} 刪除",
     "updateContent": "- {{key}} 從 {{from}} 變更成 {{to}}",
     "key": {
       "date": "日期",
