delete tx feature

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -49,6 +49,7 @@
     "out": "Expense",
     "transfer": "Transfer",
     "deleted": "Deleted",
+    "deleteHint": "Delete this record?",
     "payer": "Payer",
     "sharer": "Sharer",
     "sender": "Sender",
