--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -7,6 +7,16 @@
     "submit": "送出",
     "delete": "删除"
   },
+  "desc": {
+    "in": "收入",
+    "out": "支出",
+    "transfer": "转帐",
+    "payer": "付款者",
+    "sharer": "分摊者",
+    "sender": "汇款者",
+    "receiver": "收款者",
+    "memo": "备註"
+  },
   "bookList": {
     "bookList": "帐本清单",
     "newBook": "建立新帐本",
@@ -24,7 +34,6 @@
     "multiple": "多人",
     "billOutNote": "{{member}} 支付了 {{symbol}}{{amount}}",
     "billInNote": "{{member}} 收取了 {{symbol}}{{amount}}",
-    "transfer": "转帐",
     "transferNote": "{{srcMember}} 转帐 {{symbol}}{{amount}} 给 {{dstMember}}",
     "check": "结帐",
     "shouldReceive": "须收款",
@@ -45,16 +54,8 @@
   },
   "transaction": {
     "back": "回帐本",
-    "in": "收入",
-    "out": "支出",
-    "transfer": "转帐",
     "deleted": "已删除",
     "deleteHint": "要删除这笔纪录吗？",
-    "payer": "付款者",
-    "sharer": "分摊者",
-    "sender": "汇款者",
-    "receiver": "收款者",
-    "memo": "备註",
     "createdAt": "于 {{date}} 建立",
     "updatedAt": "于 {{date}} 更新",
     "deletedAt": "于 {{date}} 删除",
@@ -89,5 +90,12 @@
     "join": "加入此帐本？",
     "code": "通行码",
     "wrongCode": "错误的通行码"
+  },
+  "newTx": {
+    "back": "回帐本",
+    "type": "类别",
+    "date": "日期",
+    "descr": "项目",
+    "amount": "金额"
   }
 }
