--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -96,6 +96,8 @@
     "type": "类别",
     "date": "日期",
     "descr": "项目",
-    "amount": "金额"
+    "amount": "金额",
+    "all": "全部",
+    "allShare": "所有人均分"
   }
 }
