--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -92,7 +92,8 @@
     "wrongCode": "错误的通行码"
   },
   "editTx": {
-    "back": "回帐本",
+    "backToList": "回帐本",
+    "backToTx": "回帐目",
     "type": "类别",
     "date": "日期",
     "descr": "项目",
