refactor file structure

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -5,7 +5,8 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "submit": "Submit",
-    "delete": "Delete"
+    "delete": "Delete",
+    "reset": "Reset"
   },
   "desc": {
     "in": "Income",
