--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -5,7 +5,8 @@
     "confirm": "确认",
     "cancel": "取消",
     "submit": "送出",
-    "delete": "删除"
+    "delete": "删除",
+    "reset": "重置"
   },
   "desc": {
     "in": "收入",
