--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -5,7 +5,8 @@
     "confirm": "確認",
     "cancel": "取消",
     "submit": "送出",
-    "delete": "刪除"
+    "delete": "刪除",
+    "reset": "重置"
   },
   "desc": {
     "in": "收入",
