--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -100,6 +100,7 @@
     "descr": "Item",
     "amount": "Amount",
     "all": "All",
-    "allShare": "All Share Equally"
+    "allShare": "All Share Equally",
+    "remaining": "remaining {{symbol}}{{amount}}"
   }
 }
