--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -100,6 +100,7 @@
     "descr": "项目",
     "amount": "金额",
     "all": "全部",
-    "allShare": "所有人均分"
+    "allShare": "所有人均分",
+    "remaining": "尚有 {{symbol}}{{amount}} 未分配"
   }
 }
