--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -99,9 +99,19 @@
     "date": "日期",
     "descr": "項目",
     "amount": "金額",
+    "share": "分配",
     "all": "全部",
     "allShare": "所有人均分",
     "lessThan": "尚有 {{symbol}}{{amount}} 未分配",
-    "greaterThan": "多分配 {{symbol}}{{amount}}"
+    "greaterThan": "多分配 {{symbol}}{{amount}}",
+    "weight": "份數",
+    "pct": "百分比",
+    "pm": "金額調整",
+    "weightDesc": "按照每人持有的份數分配，如輸入金額則以金額為優先。",
+    "pctDesc": "按照每人佔的百分比分配，也可輸入金額。",
+    "pmDesc": "扣除個人額外的金額後，剩餘的款項由所有人平分。",
+    "unitWeight": "份",
+    "unitPct": "%",
+    "modalTitle": "{{nickname}}的分配"
   }
 }
