--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -100,6 +100,7 @@
     "descr": "Item",
     "amount": "Amount",
     "share": "Shares",
+    "adjust": "Adjust",
     "all": "All",
     "allShare": "All Share Equally",
     "lessThan": "remaining {{symbol}}{{amount}}",
