--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -100,6 +100,7 @@
     "descr": "項目",
     "amount": "金額",
     "share": "分配",
+    "adjust": "調整",
     "all": "全部",
     "allShare": "所有人均分",
     "lessThan": "尚有 {{symbol}}{{amount}} 未分配",
