--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -36,7 +36,7 @@
     "billOutNote": "{{member}} 支付了 {{symbol}}{{amount}}",
     "billInNote": "{{member}} 收取了 {{symbol}}{{amount}}",
     "transferNote": "{{srcMember}} 轉帳 {{symbol}}{{amount}} 給 {{dstMember}}",
-    "check": "結帳",
+    "settlement": "結算",
     "shouldReceive": "須收款",
     "shouldPay": "須還款",
     "deleted": "已刪除"
@@ -114,5 +114,11 @@
     "unitWeight": "份",
     "unitPct": "%",
     "modalTitle": "{{nickname}}的分配"
+  },
+  "settlement": {
+    "back": "回帳本",
+    "head": "結算",
+    "check": "結帳",
+    "balance": "個人收支"
   }
 }
