implement check feature

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -119,6 +119,7 @@
     "back": "Back",
     "head": "Settlement",
     "check": "Check",
-    "balance": "Balance"
+    "balance": "Balance",
+    "shouldPay": "Should pay"
   }
 }
